--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 
 :root {
-  --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  --body-bg: #c3cfe2;
   --msger-bg: #fff;
   --border: 2px solid #ddd;
   --left-msg-bg: #ececec;
