--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,11 @@ body {
   flex: 1;
   overflow-y: auto;
   padding: 10px;
+  height: 400px;
+  border: var(--border);
+  border-radius: 5px;
+  background: var(--msger-bg);
+  box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
 }
 .msger-chat::-webkit-scrollbar {
   width: 6px;
@@ -154,10 +159,20 @@ body {
   margin-bottom: 10px;
 }
 .msg-info-name {
+  /* align-content: flex-start; */
   margin-right: 10px;
   font-weight: bold;
+  font-size: 0.75em;
 }
 .msg-info-time {
+  font-size: 0.75em;
+  padding-top: 10px;
+  order: 2;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.msg-info-delete {
   font-size: 0.85em;
 }
 
@@ -211,16 +226,17 @@ body {
 }
 
 .logout{
+  border-color: #666;
   color: #666;
   cursor: pointer;
   background: none;
-  border: none;
-  padding-top: 10px;
+  border: solid 2px;
+  padding: 5px;
   cursor: pointer;
-  font-size: 15px;
-  /* font-family: 'Lora', serif; */
+  font-size: 12px;
   text-decoration: none;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .user-image {
@@ -248,9 +264,15 @@ body {
   cursor: pointer;
 }
 
+.msg-media-wrapper{
+  height: 200px;
+  width: 200px;
+}
+
 .msg-media{
   height: 100%;
   width: 100%;
+  object-fit: contain;
 }
 
 .file-input {
@@ -320,6 +342,42 @@ align-items: center;
 .welcome-media{
   height: 40%;
   width: 40%;
+}
+
+/* Login */
+
+.formContainer {
+  /* background-color: #a7bcff; */
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  .formWrapper {
+    background-color: white;
+    padding: 20px 60px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+
+    .logo {
+      color: #5d5b8d;
+      font-weight: bold;
+      font-size: 24px;
+
+    }
+
+    .title {
+      color: #5d5b8d;
+      font-size: 14px;
+      padding-bottom: 20px;
+    }
+
+    
+  }
+
 }
 
 
